--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "css-grid-components",
-  "version": "1.0.3",
+  "version": "1.0.6",
   "description": "Get the benefits and flexibility of CSS Grid through lightweight react components",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack --watch",
+    "build": "webpack"
   },
   "keywords": [
     "react",
@@ -18,6 +20,16 @@
   "license": "MIT",
   "dependencies": {
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "webpack": "^4.10.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-env": "^1.5.1",
+    "webpack-command": "^0.2.0"
   }
 }
