--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "Robert Taussig<robert.taussig@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "deepmerge": "^2.1.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "webpack": "^4.10.1"
