--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "webpack --watch",
     "build": "webpack"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/robtaussig/css-grid-react.git"
+  },
   "keywords": [
     "react",
     "css",
@@ -18,6 +22,10 @@
   ],
   "author": "Robert Taussig<robert.taussig@gmail.com>",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/robtaussig/css-grid-react/issues"
+  },
+  "homepage": "https://github.com/robtaussig/css-grid-react#readme",
   "dependencies": {
     "deepmerge": "^2.1.1",
     "react": "^16.3.2",
